# water-heater-model

./: README.md  dhw_network.json  dhw_simulation.py  main.py  pyproject.toml  workbench.ipynb
dhw/: __init__.py  flow_solver.py  models.py  network.py  postprocessing.py  pypes_network.py  solver.py
output/: dhw_draw_network.json
output/data/: dhw_industrial_draw.csv  dhw_residential_draw.csv
output/data/draw_profiles/: faucet.csv  shower.csv  sink.csv
